--- a/sources/templates/file_system/comp_popup_text_add.html
+++ b/sources/templates/file_system/comp_popup_text_add.html
@@ -1,7 +1,7 @@
 <div class="popup_container_gray hidden" id="text_add_popup_overlay">
     <div class="form_wide_content" id="text_add_content">
         <div class="form_popup_header">
-            <a class="form_popup_header_text">新增文本</a>
+            <a class="form_popup_header_text" id="text_add_title">新增文本</a>
         </div>
         <form class="form_popup_main" id="text_add_form">
             <label for="text_add_name" class="form_field_label">文件名</label>
